--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
   /* Palette Suns */
   --accent:#E56020;
   --accent-2:#1D1160;
-  --highlight:#F9A01B;
+  --highlight:#1D1160;
 
   --win:#2a9d8f;
   --lose:#e63946;
